# python-fastapi-docker

./: Dockerfile  README.md  build_docker.sh  run_docker.sh
app/: main.py  pyproject.toml
